Add flex containers set values

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <title>Restaurant Reviews</title>
 </head>
 
-<body>
+<body class="container">
   <header>
     <nav>
       <h1>
@@ -18,7 +18,7 @@
     </nav>
   </header>
 
-  <main id="maincontent">
+  <main id="maincontent" class="container">
     <section id="map-container">
       <div id="map"></div>
     </section>
