--- a/restaurant.html
+++ b/restaurant.html
@@ -11,7 +11,7 @@
   <title>Restaurant Info</title>
 </head>
 
-<body class="inside">
+<body class="inside" id="container">
   <!-- Beginning header -->
   <header>
     <!-- Beginning nav -->
@@ -32,7 +32,7 @@
   <!-- End header -->
 
   <!-- Beginning main -->
-  <main id="maincontent">
+  <main id="maincontent" class="container">
     <!-- Beginning map -->
 <section id="map-container">
       <div id="map"></div>
